--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <div id="header">
             <div class="header-tabs">
                 <a href="index.html" class="tab">HOME</a>
-                <a href="faq.html" class="tab">FAQ</a>
-                <a href="updates.html" class="tab">UPDATES</a>
-                <a href="bans.html" class="tab">BANS</a>
+                <a href="faq" class="tab">FAQ</a>
+                <a href="updates" class="tab">UPDATES</a>
+                <a href="bans" class="tab">BANS</a>
                 <a target="_blank" href="FortressClient.html" class="tab">DISCORD</a>
 				<a href="login.html" class="tab">Login</a>
 				<a href="register.html" class="tab">Register</a>
@@ -32,7 +32,7 @@
                     </div>
                     <p class="description">A Free Modpack and Client-Side AntiCheat built for Minecraft 1.7.10</p>
                     <br>
-                    <a href="https://github.com/Fortress-Client/client/releases/download/2.0/Fortress.Client.zip" class="download-button">DOWNLOAD</a>
+                    <a href="https://github.com/Lxnden1/web/releases/download/2.0/Fortress.Client.zip" class="download-button">DOWNLOAD</a>
                     </div>
                 </div>
             </div>
