--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                 <a href="updates" class="tab">UPDATES</a>
                 <a href="bans" class="tab">BANS</a>
                 <a target="_blank" href="FortressClient.html" class="tab">DISCORD</a>
-				<a href="login.html" class="tab">Login</a>
-				<a href="register.html" class="tab">Register</a>
+		<a href="login" class="tab">Login</a>
+		<a href="register" class="tab">Register</a>
             </div>
                 <div id="home">
                     <h4 class="text-1">Powered by WorthDevs</h4>
