--- a/faq.html
+++ b/faq.html
@@ -15,12 +15,12 @@
         <div id="header">
             <div class="header-tabs">
                 <a href="index.html" class="tab">HOME</a>
-                <a href="faq.html" class="tab">FAQ</a>
-                <a href="updates.html" class="tab">UPDATES</a>
-                <a href="bans.html" class="tab">BANS</a>
+                <a href="faq" class="tab">FAQ</a>
+                <a href="updates" class="tab">UPDATES</a>
+                <a href="bans" class="tab">BANS</a>
                 <a target="_blank" href="FortressClient.html" class="tab">DISCORD</a>
-				<a href="login.html" class="tab">Login</a>
-				<a href="register.html" class="tab">Register</a>
+		<a href="login" class="tab">Login</a>
+		<a href="register" class="tab">Register</a>
             </div>
                 <div id="home">
                     <h4 class="text-1">Powered by WorthDevs</h4>
