--- a/bans.html
+++ b/bans.html
@@ -15,7 +15,7 @@
         <div class="pseudo-body">
         <div id="header">
             <div class="header-tabs">
-                <a href="index.html" class="tab">HOME</a>
+                <a href="https://fortressclient.tk" class="tab">HOME</a>
                 <a href="faq" class="tab">FAQ</a>
                 <a href="updates" class="tab">UPDATES</a>
                 <a href="bans" class="tab">BANS</a>
