--- a/updates.html
+++ b/updates.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="description" content="The Latest Updates For Aero Client">
+		<meta name="description" content="The Latest Updates For Fortress Client">
         <title>Fortress Client | Updates</title>
         <link rel="icon" href="favicon.ico">
 		<script src="jquery-3.4.1.min.js"></script>
@@ -19,8 +19,6 @@
                 <a href="updates" class="tab">UPDATES</a>
                 <a href="bans" class="tab">BANS</a>
                 <a target="_blank" href="FortressClient.html" class="tab">DISCORD</a>
-		<a href="login" class="tab">Login</a>
-		<a href="register" class="tab">Register</a>
             </div>
                 <div id="home">
                     <h4 class="text-1">Powered by WorthDevs</h4>
