--- a/bans.html
+++ b/bans.html
@@ -26,7 +26,7 @@
                     <div class="banlist-box">
                     <div class="left-items">
                         <h2 class="banlist-label">Fortress Client Punishments</h2>
-                        <p>For information on how bans work, click <a href="appeal.html">here</a>.</p>
+                        <p>For information on how bans work, click <a href="appeal">here</a>.</p>
                         <p>We have not started any banwave.</p>
                         <div class="bans-box">
 
