--- a/faq.html
+++ b/faq.html
@@ -25,6 +25,22 @@
                     <div class="faq-box">
                     <div class="left-items">
                         <h2 class="faq-label">Frequently Asked Questions</h2>
+			<br>
+                        <h3>What information does this website collect?</h3>
+                        <p>Nothing, we don't even track how many people download the client.</p>
+                        <h3>What is Fortress Client?</h3>
+                        <p>Fortress Client is a reskin of CheatBreaker, with way more features added!</p>
+                        <h3>Is it safe & free?</h3>
+                        <p>Yes! Fortress Client is safe and completely free to download.</p>
+                        <h3>How do I get cosmetics on the client?</h3>
+                        <p>By being active in our Discord. In doing so you will level up, and the higher the level, the more rewards you'll get!</p>
+                        <h3>How can I request for something to be added to Fortress Client?</h3>
+                        <p>You may suggest new features in our Discord.</p>
+                        <h3>Can I use my own mods?</h3>
+                        <p>No, you may only use mods included in Fortress Client.</p>
+                        <h3>Does Fortress Client boost frames?</h3>
+                        <p>Fortress Client will often more than double your frames in game.</p>
+                        </div>
                     </div>
                     </div>
                     </div>
