--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <a target="_blank" href="FortressClient.html" class="tab">DISCORD</a>
             </div>
                 <div id="home">
+		    <h4 class="text-1">Powered by WorthDevs</h4>
                     <div id="centered-items" align="center">
                     <img class="logo" src="img/logo.png" draggable="false">
                     <div id="name">
