--- a/bans.html
+++ b/bans.html
@@ -22,6 +22,7 @@
                 <a target="_blank" href="FortressClient.html" class="tab">DISCORD</a>
             </div>
                 <div id="home">
+		    <h4 class="text-1"></h4>
                     <div class="banlist-box">
                     <div class="left-items">
                         <h2 class="banlist-label">Fortress Client Punishments</h2>
