--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     </div>
                     <p class="description">A Free Modpack and Client-Side AntiCheat built for Minecraft 1.7.10</p>
                     <br>
-                    <a href="https://github.com/Lxnden1/web/releases/download/2.0/Fortress.Client.zip" class="download-button">DOWNLOAD</a>
+                    <a href="https://github.com/Lxnden1/web/releases/download/2.0/FortressClient-1.7.10.zip" class="download-button">DOWNLOAD</a>
                     </div>
                 </div>
             </div>
