--- a/404.html
+++ b/404.html
@@ -30,7 +30,7 @@
                         <p class="error-1">Oops!</p>
                         <br>
                         <br>
-                        <p class="error-2">We could not find the page you're looking for.</p>
+                        <p class="error-2">We searched far and wide, but couldn't find the page you're looking for.</p>
                     </div>
                     </div>
                 </div>
