--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
                     <div id="centered-items" align="center">
                     <img class="logo" src="img/logo.png" draggable="false">
                     <div id="name">
-                        <p class="name-1">FORTRESS </p>
+                         <p class="name-1">FORTRESS </p>
                         <p class="name-2">CLIENT</p>
                     </div>
-                    <p class="description">A Free Modpack and Client-Side AntiCheat built for Minecraft 1.7.10</p>
+                    <p class="description">A Free FPS Boosting Modpack built for Minecraft 1.7.10. <br> <br> <b>The goal and mission of Fortress Client is to create a non-toxic and safe playing environment.</b> <br> <br> Click the button below to get started!</p>
                     <br>
                     <a href="https://github.com/Lxnden1/web/releases/download/2.0/FortressClient-1.7.10.zip" class="download-button">DOWNLOAD</a>
                     </div>
