--- a/bans.html
+++ b/bans.html
@@ -1,34 +1,59 @@
-﻿<!DOCTYPE html>
+
+<!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="description" content="Aero Client Punishment list">
-        <title>Fortress Client | Bans</title>
+		<meta name="description" content="Fortress Client Punishment list">
+        <title>Fortress Client</title>
         <link rel="icon" href="favicon.ico">
-        <script src="jquery-3.4.1.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
         <script src="./site.js"></script>
-        <link href="css2.css?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
         <link href="page.css" rel="stylesheet">
     </head>
-    <img draggable="false" class="background-img" src="img/background-new.jpg">
+    <img draggable="false" class="background-img" src="assets/img/background.png">
     <body>
         <div class="pseudo-body">
         <div id="header">
             <div class="header-tabs">
-                <a href="https://fortressclient.tk" class="tab">HOME</a>
-                <a href="faq" class="tab">FAQ</a>
-                <a href="updates" class="tab">UPDATES</a>
-                <a href="bans" class="tab">BANS</a>
-                <a target="_blank" href="FortressClient.html" class="tab">DISCORD</a>
+                <a href="https://aeroclient.net" class="tab">HOME</a>
+                <a href="/faq" class="tab">FAQ</a>
+                <a href="/punishments" class="tab">PUNISHMENTS</a>
+                <a target="_blank" href="https://discord.gg/ucynXYXFzm" class="tab">DISCORD</a>
             </div>
                 <div id="home">
-		    <h4 class="text-1"></h4>
+                    <h4 class="text-1"></h4>
                     <div class="banlist-box">
                     <div class="left-items">
                         <h2 class="banlist-label">Fortress Client Punishments</h2>
-                        <p>For information on how bans work, click <a href="appeal">here</a>.</p>
-                        <p>We have not started any banwave.</p>
+                        <p>For information on how these work, click <a href="https://fortressclient.tk/appeal">here</a>.</p>
+			            <p>This punishments list started 3/07/2021.</p>
                         <div class="bans-box">
+                            <b>Username</b>
+                            <b class="duration">Duration</b>
+                            <b class="type">Type</b>
+                            <b class="reason">Reason</b>
+                            <hr>
+                            <b class="reason"></b>
 
+                            <br><p class="user-name">iEndless</p>
+                            <div class="punished-user">
+                                <img src="https://crafatar.com/renders/body/a3eb34f0-c53a-40cb-adb4-ca04916bc0c9">
+                                <b class="punishment-type">Ban</b> <!-- Mute or Ban Only -->
+                                <b class="punishment-reason">Abuse</b> <!-- Toxicity or Abuse Only -->
+                                <b class="punishment-duration">Forever</b> <!-- Days Only -->
+                            </div>
+                            <hr>
+				
+                        </div>
+                        </div>
+                    </div>
+                    </div>
+                    </div>
+                    </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
